# OpenUxAS

./: .gitignore  .travis.yml  .xspath  BUILDERS_STATUS  CHANGES  CHANGES_FOR_RIVETSS  Cargo.toml  DISAGGREGATION  QUICKSTART  README.md  RunLmcpGen.sh  browse_doxygen.sh  browse_lmcp.sh  build.rs  build_documentation.sh  extract-all-lmcp-deps  extract-lmcp-deps  grovel-task-includes  grovel-task-service-includes  install_prerequisites.sh  meson.build  meson_options.txt  path.sh  rebuild  show-3rd-files  show-lib-files  show-src-files  toolroot-README  zpinger
3rd/: .gitignore  minizip.wrap.tmpl
3rd/TinyGPS/: meson.build
3rd/wrap_patches/boost_1_67_0/: meson.build
3rd/wrap_patches/czmq-3.0.1/: meson.build
3rd/wrap_patches/czmq-4.0.2/: meson.build
3rd/wrap_patches/minizip-1.2/: meson.build
3rd/wrap_patches/zyre-1.1.0/: meson.build
3rd/wrap_patches/zyre-2.0.0/: meson.build
ci/: travis_linux.sh  travis_osx.sh
configuration_parser/: Cargo.toml
configuration_parser/src/: lib.rs  main.rs
docker-resin/: Dockerfile
docker/deploy/: 01_buildRun_Image.sh
docker/deploy/Image/: Dockerfile.UxAS_run
docker/develop/: Dockerfile.UxAS_build  Dockerfile.uxas_develop  buildUxAS.sh  runUxAS_tests.sh
docker/develop/InstallLibraries/: 00_InstallDependencies.sh  boost.sh  cppzmq.sh  czmq.sh  minizip.sh  sqlite3.sh  sqlitecpp.sh  zeromq.sh  zlib.sh  zyre.sh
examples/01_HelloWorld/: .gdbinit  README-dual.md  README-gdb-tui.md  README-gdb.md  cfg_HelloWorld-1.xml  cfg_HelloWorld-2.xml  cfg_HelloWorld.xml  runUxAS_HelloWorld-dual.sh  runUxAS_HelloWorld.sh  stop
examples/02_Example_WaterwaySearch/: cfg_WaterwaySearch.xml  runAMASE_WaterwaySearch.sh  runHeadless.sh  runUxAS_WaterwaySearch.sh
examples/03_Example_DistributedCooperation/: .gitignore  README.md  cfgDistributedCooperation_1000-template.xml  cfgDistributedCooperation_2000-template.xml  configure-ip4-link.sh  macUxAS_DistributedCooperation.sh  runAMASE_DistributedCooperation.sh  runUxAS_DistributedCooperation.sh
examples/05_AssignTasks/: runUxAS_AssignTasks.sh
examples/06_AutomationDiagram/: runUxAS_AutomationDiagram.sh
examples/08_Pixhawk_WaterwaySearch/: cfg_WaterwaySearch.xml
examples/HelloRust/: runUxAS_HelloRust.sh
examples/Rendezvous/: runUxAS.sh
experimental/: NOTES  classes  deplibs  deplibs.README  grapher1  llvm-UxAS_Main-callgraph  services  xs.README
experimental/tools/: cinclude2dot  other.README
experimental/tools/other/cpp-dependencies_sample/: cycles.dot  foo.dot
mdms/: CMASI.xml  UXNATIVE.xml
message_logger/: Cargo.toml
message_logger/src/: main.rs
src/: UxAS_Main.cpp  lib.rs  main.rs
src/Communications/: LmcpObjectNetworkZeroMqZyreBridge.cpp  ZeroMqZyreBridge.cpp
src/DPSS/: meson.build
src/DPSS/rs/: gen_bindings.py  meson.build
src/DPSS/rs/src/: bindings.rs
src/Includes/Constants/: Constants_Control.h  UxAS_String.h
src/Services/: 00_ServiceList.h  ServiceManager.cpp  meson.build
src/Services/rs/: Cargo.toml  lib.rs  meson.build  mod.rs
src/Tasks/: CmasiLineSearchTaskService.cpp  TaskManagerService.cpp  TaskManagerService.h  TaskServiceBase.cpp  TaskServiceBase.h  meson.build
src/Tasks/rs/: Cargo.toml  meson.build
src/Tasks/rs/src/: lib.rs  line_search.rs
src/separate_compilation/: .gitignore  00_ServiceList.h  RunLmcpGen.sh  ServiceBase.h  ServiceManager.h  task01_main.cpp
src/separate_compilation/Communications/: ImpactSubscribePushBridge.cpp  ZeroMqZyreBridge.cpp  meson.build
src/separate_compilation/Services/: 00_ServiceList.h  01_HelloWorld.cpp  AutomationDiagramDataService.cpp  AutomationDiagramDataService.h  meson.build
src/separate_compilation/Utilities/: UxAS_Log.h  meson.build
src/separate_compilation/mdms/: CMASI.xml  UXNATIVE.xml  UXTASK.xml
src/separate_compilation/task01/: AssignmentCoordinatorTaskService.cpp  AssignmentCoordinatorTaskService.h  meson.build
standalone_planbuilder/: Cargo.toml
standalone_planbuilder/src/: client.rs  lib.rs  main.rs  plan_builder.rs  unit_conversions.rs
tests/: meson.build
